@@ -4,30 +4,63 @@
 <globals>
     <colors>
 		<!-- theme-colors for svgtemplates-->
-		<color name="clrDown">FF00002F</color>
-		<color name="clrUp">FF00007E</color>
-		<!--same as clrUp-->
-		<color name="clrHigh">FF0000FC</color>
-		<!--##############################-->
+		
+		<!--start (left-right) of two-color-gradients-->
+		<color name="clrDown">FF120401</color>
+		
+		<!--center of two-color-gradients, brighter than clrDown-->
+		<color name="clrUp">FF780B02</color>
+		
+		<!--
+		
+		-->
+		
+		<!--bars: percentseen, elapsed, viewoffset-->
+		<color name="clrHigh">FF666666</color>
+		
+		<!--separatortext-->
 		<color name="clrSeparatorText">FFEBEBEB</color>
-        <color name="clrRed">FFFF0000</color>
-        <color name="clrGreen">FF5FE200</color>
-        <color name="clrBlue">FF007FE2</color>
-        <color name="clrBlack">FF000000</color>
-        <color name="clrTransBlack">C0000000</color>
-        <color name="clrSemiTransBlack">D0000000</color>
-        <color name="clrWhite">FFFFFFFF</color>
-        <color name="clrDarkGray">FF808080</color>
-        <color name="clrLightGray">FFEBEBEB</color>
-        <color name="clrTransparent">00000000</color>
-        <color name="clrActive">C8FF4500</color>
-        <color name="clrBackGroundGray">FF131313</color>
-        <color name="clrTransRed">99FF0000</color>
-        <color name="clrRecMenuHide">F0000000</color>
-        <color name="clrRecMenuBorderTop">FF4D4D4D</color>               
-        <color name="clrRecMenuBorderBottom">FF171717</color>
-        <color name="clrRecMenuConflTop">FF373938</color>
-    </colors>
+		
+		<!--warnings, timerconflicts-->
+		<color name="clrRed">FFFF0000</color>
+		
+		<!--{marks[active]} in displayreplay-->
+		<color name="clrGreen">FF5FE200</color>
+		
+		<!--inactive and startmarks in displayreplay
+		borders in tvguideng-root
+		textcolor and rectangles in tvguideng-recmenu-->
+		<color name="clrBlack">FF000000</color>
+		
+		<!--onpause displayreplay-->
+		<color name="clrSemiTransBlack">D0000000</color>
+		
+		<!--text in tvguideng-recmenu, tvguideng-root-->
+		<color name="clrWhite">FFFFFFFF</color>
+		
+		<!--main textcolor-->
+		<color name="clrLightGray">FFEBEBEB</color>
+		
+		<!--eraser ;)-->
+		<color name="clrTransparent">00000000</color>
+		
+		<!--background dayset, editmode in tvguideng-recmenu-->
+		<color name="clrActive">FF666666</color>
+		
+		<!--background timerconflict in tvguideng-recmenu-->
+		<color name="clrBackGroundGray">FF131313</color>
+		
+		<!--overlap-text in tvguideng-recmenu (timers)-->
+		<color name="clrTransRed">99FF0000</color>
+		
+		<!--background in tvguideng-recmenu-->
+		<color name="clrRecMenuHide">F0000000</color>
+		
+		<!--borders of tvguideng-recmenu-->
+		<color name="clrRecMenuBorderTop">FF4D4D4D</color>               
+		<color name="clrRecMenuBorderBottom">FF171717</color>
+		<color name="clrRecMenuConflTop">FF373938</color>
+	</colors>
     <!--
     these variables can be used everywhere in the templates
     variabls of type int can also be used as conditions, just
